@@ -614,10 +614,37 @@ function AddonParagraph_create() {
             editorHeight = presenter.$view.height();
 
         if (!presenter.configuration.isToolbarHidden) {
-            editorHeight -= presenter.$view.find('.mce-toolbar').height();
-        }
+            //setTimouts for checking if height of the toolbar changed
+            setTimeout(function () {
+                    var lastHeight = presenter.$view.find('.mce-toolbar').height(),
+                        newHeight,
+                        counter = 0,
+                        toolbarHeightChangedTimeout = false,
+                        originalEditorHeight = editorHeight;
 
-        $editor.height(editorHeight);
+                        editorHeight -= presenter.$view.find('.mce-toolbar').height();
+                        $editor.height(editorHeight);
+                    (function checkHeight(){
+                        newHeight = presenter.$view.find('.mce-toolbar').height();
+                        if(lastHeight !== newHeight) {
+                            var height = originalEditorHeight - presenter.$view.find('.mce-toolbar').height();
+                            $editor.height(height);
+                        }
+                        lastHeight = newHeight;
+
+                        if(toolbarHeightChangedTimeout) {
+                            clearTimeout(toolbarHeightChangedTimeout);
+                        }
+
+                        counter++;
+                        if(counter < 3) {
+                            toolbarHeightChangedTimeout = setTimeout(checkHeight, 500);
+                        }
+                    })();
+            }, 0);
+        } else {
+            $editor.height(editorHeight);
+        }
     };
 
     presenter.onInit = function AddonParagraph_onInit() {
@@ -641,7 +668,7 @@ function AddonParagraph_create() {
         }
 
         presenter.$tinyMCEToolbar = presenter.$view.find('.mce-toolbar');
-        presenter.$tinyMCEToolbar.on('resize', presenter.setIframeHeight);
+        presenter.setIframeHeight();
 
         presenter.tinyMceContainer = presenter.$view.find('.mce-container.mce-panel.mce-tinymce');
         presenter.tinyMceContainer.css('border', 0);
